# obvious

./: .gitignore  AGENTS.md  Makefile  README.md
.git-hooks-backup/: prepare-commit-msg
.github/workflows/: ci.yml
.obvious/: config.yml  obvious.md
db/migrations/: 001_initial_schema.sql  002_seed_nis2.sql  003_control_assessments.sql  004_search_notifications.sql  005_webhooks.sql  006_approval_workflows.sql  007_audit_planning.sql
demo/: run_demo.py  test_integration.py
engine/: pyproject.toml
engine/documentation/: __init__.py  bedrock.py  chain.py  narrative.py  templates.py  working_paper.py
engine/economy/: __init__.py  budget_tracker.py  resource_allocation.py  templates.py  work_program.py
engine/orchestrator/: __init__.py  gateway.py  pipeline.py
engine/quality/: __init__.py  conflict_resolver.py  cross_validator.py  floors.py  gate.py  sampler.py  trending.py
engine/risk/: __init__.py  aggregator.py  exceptions.py  heat_map.py  materiality.py  scorer.py
engine/scope/: __init__.py  dag.py  enforcement.py  history.py  impact.py  validation.py  workflow.py
engine/shared/: __init__.py  cache.py  logging.py  metrics.py  models.py
engine/tests/: test_cache.py  test_documentation.py  test_economy.py  test_logging.py  test_metrics.py  test_orchestrator.py  test_quality.py  test_risk.py  test_risk_enhanced.py  test_scope.py
frontend/: jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
scripts/: validate_models.py  validate_package.js  validate_pyproject.py  validate_types.js
(+308 files in other folders)
