[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiauditor-engine"
version = "0.1.0"
description = "AIAUDITOR autonomous cybersecurity audit reasoning engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "kafka-python>=2.0.2",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.30.1",
    "fastapi>=0.111.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.4.0",
    "numpy>=2.0.0",
    "prometheus-client>=0.20.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "engine/scope",
    "engine/economy",
    "engine/risk",
    "engine/quality",
    "engine/documentation",
    "engine/orchestrator",
    "engine/shared",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["engine/tests"]
